@startuml

title __P1's Class Diagram__\n

  namespace shapes {
    class shapes.BotonesSet {
    }
  }
  

  namespace shapes {
    class shapes.CalculadoraFiguras {
    }
  }
  

  namespace shapes {
    class shapes.CalculadoraFigurasSet {
    }
  }
  

  namespace shapes {
    interface shapes.Drawable {
    }
  }
  

  namespace shapes {
    class shapes.MyCircle {
    }
  }
  

  namespace shapes {
    class shapes.MyEllipse {
    }
  }
  

  namespace shapes {
    class shapes.MyRectangle {
    }
  }
  

  namespace shapes {
    abstract class shapes.MyShape {
    }
  }
  

  namespace shapes {
    class shapes.MySquare {
    }
  }
  

  namespace shapes {
    class shapes.MyTriangle {
    }
  }
  

  namespace shapes {
    class shapes.ventanaSet {
    }
  }
  

  shapes.BotonesSet -up-|> javax.swing.JButton
  shapes.MyCircle -up-|> shapes.MyEllipse
  shapes.MyEllipse -up-|> shapes.MyShape
  shapes.MyRectangle -up-|> shapes.MyShape
  shapes.MyShape .up.|> shapes.Drawable
  shapes.MySquare -up-|> shapes.MyRectangle
  shapes.MyTriangle -up-|> shapes.MyShape


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
